storage/innobase/include/row0mysql.h
@@ -916,7 +916,9 @@ void innobase_report_computed_value_failed(dtuple_t *row);
 @param[in]	old_table	during ALTER TABLE, this is the old table
 				or NULL.
 @param[in]	update	update vector for the parent row
-@param[in]	foreign		foreign key information
+@param[in]	ignore_warnings	ignore warnings during calculation. Usually
+				means that a calculation is internal and
+				should have no side effects.
 @return the field filled with computed value */
 dfield_t*
 innobase_get_computed_value(
@@ -929,8 +931,9 @@ innobase_get_computed_value(
 	THD*			thd,
 	TABLE*			mysql_table,
 	byte*			mysql_rec,
-	const dict_table_t*	old_table,
-	const upd_t*		update);
+	const dict_table_t*	old_table=NULL,
+	const upd_t*		update=NULL,
+	bool			ignore_warnings=false);
 
 /** Get the computed value by supplying the base column values.
 @param[in,out]	table		the table whose virtual column
